--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,7 @@ simplejson==3.5.2
 six==1.6.1
 times==0.6.2
 wsgiref==0.1.2
+matplotlib==1.3.1
+mpld3==0.2
 
 -e git+https://github.com/svenkreiss/databench.git#egg=databench
