--- a/.ebextensions/01_nginx_socketio.config
+++ b/.ebextensions/01_nginx_socketio.config
@@ -1,3 +1,5 @@
 container_commands:
-  nginx_socketio:
-    command: "python nginx_socketio_conf.py"
+  copy:
+    command: "cp .ebextensions/01rewrite_nginx_config.py /opt/elasticbeanstalk/hooks/appdeploy/enact/"
+  make_exe:
+    command: "chmod +x /opt/elasticbeanstalk/hooks/appdeploy/enact/01rewrite_nginx_config.py"
