--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,17 @@
 Flask==0.10.1
-Flask-SocketIO==0.3.7
-Jinja2==2.7.2
+Flask-Markdown==0.3
+Flask-Sockets==0.1
+Jinja2==2.7.3
+Markdown==2.4.1
 MarkupSafe==0.23
-Werkzeug==0.9.4
+Pygments==1.6
+Werkzeug==0.9.6
 gevent==1.0.1
-gevent-socketio==0.3.6
 gevent-websocket==0.9.3
-greenlet==0.4.2
+greenlet==0.4.3
 itsdangerous==0.24
-python-dateutil==2.2
-pytz==2014.3
-redis==2.9.1
-rq==0.4.6
-rq-dashboard==0.3.3
-simplejson==3.5.2
-six==1.6.1
-times==0.6.2
+jinja2-highlight==0.5.1
+pyzmq==14.3.1
 wsgiref==0.1.2
-matplotlib==1.3.1
-mpld3==0.2
 
--e git+https://github.com/svenkreiss/databench.git#egg=databench
+git+https://github.com/svenkreiss/databench.git@dev-0.3
