--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,7 @@ itsdangerous==0.24
 jinja2-highlight==0.5.1
 pyzmq==14.3.1
 wsgiref==0.1.2
+mpld3==0.2
+matplotlib==1.4.0
 
 git+https://github.com/svenkreiss/databench.git@dev-0.3
