--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,7 @@ pyzmq==14.3.1
 wsgiref==0.1.2
 mpld3==0.2
 matplotlib==1.4.0
+redis==2.10.3
+rq==0.4.6
 
 git+https://github.com/svenkreiss/databench.git@dev-0.3
