--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,4 @@ matplotlib==1.4.0
 redis==2.10.3
 rq==0.4.6
 
-git+https://github.com/svenkreiss/databench.git@dev-0.3
+git+https://github.com/svenkreiss/databench.git
