--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,4 @@ wsgiref==0.1.2
 matplotlib==1.3.1
 mpld3==0.2
 
--e git+https://github.com/svenkreiss/databench.git#egg=databench
+git+https://github.com/svenkreiss/databench.git@v0.2
