install official databench from pypi

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,21 @@ Markdown==2.4.1
 MarkupSafe==0.23
 Pygments==1.6
 Werkzeug==0.9.6
+databench==0.3.2
 gevent==1.0.1
 gevent-websocket==0.9.3
 greenlet==0.4.3
 itsdangerous==0.24
 jinja2-highlight==0.5.1
-pyzmq==14.3.1
-wsgiref==0.1.2
-mpld3==0.2
 matplotlib==1.4.0
+mock==1.0.1
+mpld3==0.2
+numpy==1.8.2
+pyparsing==2.0.2
+python-dateutil==2.2
+pyzmq==14.3.1
 redis==2.10.3
 rq==0.4.6
-
-git+https://github.com/svenkreiss/databench.git
+six==1.7.3
+wsgiref==0.1.2
+zipstream==1.0.4
