--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,27 @@ Flask==0.10.1
 Flask-Markdown==0.3
 Flask-Sockets==0.1
 Jinja2==2.7.3
-Markdown==2.4.1
+Markdown==2.5.1
 MarkupSafe==0.23
 Pygments==1.6
 Werkzeug==0.9.6
-databench==0.3.2
+databench==0.3.8
 gevent==1.0.1
 gevent-websocket==0.9.3
-greenlet==0.4.3
+greenlet==0.4.5
 itsdangerous==0.24
 jinja2-highlight==0.5.1
-matplotlib==1.4.0
+matplotlib==1.4.2
 mock==1.0.1
 mpld3==0.2
-numpy==1.8.2
-pyparsing==2.0.2
+nose==1.3.4
+numpy==1.9.0
+pyparsing==2.0.3
 python-dateutil==2.2
-pyzmq==14.3.1
+pytz==2014.7
+pyzmq==14.4.0
 redis==2.10.3
 rq==0.4.6
-six==1.7.3
+six==1.8.0
 wsgiref==0.1.2
 zipstream==1.0.4
