--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,21 @@
-Flask==0.10.1
-Flask-Markdown==0.3
-Flask-Sockets==0.1
-Jinja2==2.7.3
-Markdown==2.6.2
+backports-abc==0.4
+backports.ssl-match-hostname==3.5.0.1
+certifi==2015.11.20.1
+click==6.2
+cycler==0.10.0
+-e git+https://github.com/svenkreiss/databench.git@eeccb118af41305f61aa3f208259649685025a79#egg=databench
+Jinja2==2.8
 MarkupSafe==0.23
-Pygments==2.0.2
-Werkzeug==0.10.4
-databench==0.3.17
-gevent==1.0.2
-gevent-websocket==0.9.5
-greenlet==0.4.7
-itsdangerous==0.24
-jinja2-highlight==0.5.1
-matplotlib==1.4.2
-mock==1.0.1
+matplotlib==1.5.1
 mpld3==0.2
-nose==1.3.4
-numpy==1.9.0
-pyparsing==2.0.3
-python-dateutil==2.2
-pytz==2014.7
-pyzmq==14.7.0
-redis==2.10.3
-rq==0.4.6
-six==1.8.0
-wsgiref==0.1.2
-zipstream==1.1.0
+numpy==1.10.4
+pyparsing==2.1.0
+python-dateutil==2.4.2
+pytz==2015.7
+pyzmq==15.2.0
+redis==2.10.5
+rq==0.5.6
+singledispatch==3.4.0.3
+six==1.10.0
+tornado==4.3
+wheel==0.29.0
