--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
  - "3.4"
  - "3.5"
 install:
- - "pip install -r requirements.txt"
- - "pip install -r tests/requirements.txt"
+ - pip install --upgrade pip
+ - pip install -r requirements.txt
+ - pip install -r tests/requirements.txt
 script: "nosetests tests"
