--- a/analyses/index.yaml
+++ b/analyses/index.yaml
@@ -12,7 +12,8 @@ analyses:
     title: Hello React
     description: Demoing how to use React with Databench.
     build: npm run build-helloreact
-    watch: helloreact/main.js
+    watch:
+      - helloreact/main.js
   - name: angular
     title: Angular.js Demo
     description: Calculating π the simple way with angular.js interface.
