--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
 script:
  - flake8
  - npm run lint
- - localcrawl --start http://localhost:5000 --run databench --log DEBUG
+ - localcrawl --start http://localhost:5000 --run-delay 10.0 --run databench --log DEBUG
  - html5validator --root _crawled/
  - nosetests tests
