--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ install:
  - pip install -r requirements.txt
  - pip install -r tests/requirements.txt
  - npm install
+ # Java 8 for html5validator
+ - sudo apt-get install oracle-java8-installer
+ - sudo update-java-alternatives -s java-8-oracle
 script:
  - flake8
  - npm run lint
