validate angular attributes ok

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
  - flake8
  - npm run lint
  - localcrawl --start http://localhost:5000 --run-delay 10.0 --run databench --log DEBUG
- - html5validator --root _crawled/
+ - html5validator --root _crawled/ --ignore-re 'Attribute "ng-[a-z-]+" not allowed'
  - nosetests tests
