run crawl on different port

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ install:
 script:
  - flake8
  - npm run lint
- - localcrawl --start http://localhost:5000 --run-delay 10.0 --run databench --log DEBUG
+ - localcrawl --start http://localhost:5001 --run-delay 10.0 --run databench --log DEBUG --port 5001
  - html5validator --root _crawled/ --ignore-re 'Attribute "ng-[a-z-]+" not allowed'
  - nosetests tests
