--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "import"
     ],
     "rules": {
-        "no-param-reassign": 0
+        "no-param-reassign": 0,
+        "react/jsx-filename-extension": 0
     }
 }
