--- a/analyses/index.yaml
+++ b/analyses/index.yaml
@@ -65,3 +65,9 @@ analyses:
     watch:
       - helloworld/*.js
       - helloworld/*.html
+  - name: hellotypescript
+    title: Hello TypeScript
+    description: Demo of TypeScript and Databench.
+    watch:
+      - hellotypescript/*.js
+      - hellotypescript/*.html
