--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "databench_examples",
-  "version": "0.4.1",
+  "version": "0.6.0",
   "description": "Databench Examples",
   "main": "index.js",
   "directories": {
@@ -8,25 +8,26 @@
     "test": "tests"
   },
   "dependencies": {
+    "databench": "^0.5.3",
+    "d3": "^3.5.16",
+    "font-awesome": "^4.5.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
+  },
+  "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
-    "d3": "^3.5.16",
-    "font-awesome": "^4.5.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "webpack": "^1.13.1"
-  },
-  "devDependencies": {
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "webpack": "^1.13.1"
   },
   "scripts": {
-    "build-helloreact": "webpack ./analyses/helloreact/analysis.js ./analyses/helloreact/bundle.js --module-bind 'js=babel-loader'",
+    "watch-helloreact": "webpack ./analyses/helloreact/analysis.js ./analyses/helloreact/bundle.js --module-bind 'js=babel-loader' --watch",
     "lint": "eslint analyses/**/analysis.js && eslint analyses/bagofcharsd3/d3charcount.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
