--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "tests"
   },
   "dependencies": {
-    "databench": "^0.6.0",
+    "@types/react": "^15.0.25",
+    "@types/react-dom": "^15.5.0",
     "d3": "^3.5.16",
+    "databench": "^0.6.0",
     "font-awesome": "^4.5.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^3.1.3",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.11.1",
@@ -25,10 +28,11 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "json-loader": "^0.5.4",
+    "source-map-loader": "^0.2.1",
     "ts-loader": "^2.1.0",
     "tslint": "^5.3.2",
     "typescript": "^2.3.3",
-    "webpack": "^1.13.1"
+    "webpack": "^2.6.1"
   },
   "scripts": {
     "watch-hellotypescript": "webpack ./analyses/hellotypescript/analysis.ts ./analyses/hellotypescript/bundle.js --module-bind 'ts=awesome-typescript-loader' --module-bind 'json=json-loader' --watch",
