--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^3.5.16",
     "databench": "^0.6.0",
     "font-awesome": "^4.5.0",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
@@ -29,14 +30,11 @@
     "eslint-plugin-react": "^6.8.0",
     "json-loader": "^0.5.4",
     "source-map-loader": "^0.2.1",
-    "ts-loader": "^2.1.0",
     "tslint": "^5.3.2",
     "typescript": "^2.3.3",
     "webpack": "^2.6.1"
   },
   "scripts": {
-    "watch-hellotypescript": "webpack ./analyses/hellotypescript/analysis.ts ./analyses/hellotypescript/bundle.js --module-bind 'ts=awesome-typescript-loader' --module-bind 'json=json-loader' --watch",
-    "watch-helloreact": "webpack ./analyses/helloreact/analysis.js ./analyses/helloreact/bundle.js --module-bind 'js=babel-loader' --watch",
     "lint": "eslint analyses/**/analysis.js && eslint analyses/bagofcharsd3/d3charcount.js && tslint analyses/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
