--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-https://github.com/svenkreiss/databench/zipball/master
+databench==0.7b4
 Markdown==2.6.8
 matplotlib==2.0.2
-numpy==1.12.1
+numpy==1.13.1
 python-dateutil==2.6.0
 pytz==2017.2
 pyzmq==15.2.0
@@ -9,4 +9,4 @@ redis==2.10.5
 rq==0.5.6
 singledispatch==3.4.0.3
 six==1.10.0
-tornado==4.3
+tornado==4.5
