--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^15.0.25",
     "@types/react-dom": "^15.5.0",
     "d3": "^3.5.16",
-    "databench": "^0.6.0",
+    "databench": "^0.7.0-beta.5",
     "font-awesome": "^4.5.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
@@ -31,8 +31,8 @@
     "json-loader": "^0.5.4",
     "source-map-loader": "^0.2.1",
     "tslint": "^5.3.2",
-    "typescript": "^2.3.3",
-    "webpack": "^2.6.1"
+    "typescript": "^2.4.1",
+    "webpack": "^3.1.0"
   },
   "scripts": {
     "lint": "eslint analyses/**/analysis.js && eslint analyses/bagofcharsd3/d3charcount.js && tslint 'analyses/**/*.ts?(x)'",
