--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-https://github.com/svenkreiss/databench/zipball/master
-Markdown==2.6.8
-matplotlib==2.0.2
-numpy==1.12.1
-python-dateutil==2.6.0
-pytz==2017.2
-pyzmq==15.2.0
-redis==2.10.5
-rq==0.5.6
+databench==0.7b12
+hacking>=0.13
+Markdown==2.6.11
+matplotlib==2.1.1
+numpy==1.14.0
+python-dateutil==2.6.1
+pytz==2017.3
+pyzmq==16.0.3
+redis==2.10.6
+rq==0.10.0
 singledispatch==3.4.0.3
-six==1.10.0
-tornado==4.3
+six==1.11.0
+tornado==4.5.3
